# juchats

./: LICENSE  Makefile  README.md  README_EN.md  docker-compose.yml  dockerfile  openai-server.py  pyproject.toml
.github/workflows/: deploy.yml  run-tests.yml
juchats/: chat.py  configs.py  models.py  openai.py  types.py  utils.py
tests/: test_chat.py  test_get_models.py
