[tool.poetry]
name = "juchats"
version = "0.0.2"
description = ""
authors = ["ultrasev <i@ultrasev.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.27.0"
uuid = "^1.30"
pydantic = "^2.8.2"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
