[tool.poetry]
name = "juchats"
version = "0.0.3"
description = ""
authors = ["ultrasev <i@ultrasev.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.27.0"
uuid = "^1.30"
pydantic = "^2.8.2"
websockets = "^12.0"
fastapi = "^0.112.1"
loguru = "^0.7.2"
uvicorn = "^0.30.6"
redislite = "^6.2.912183"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
